@@ -18,6 +18,7 @@
 		<file>breakenable.png</file>
 		<file>builder.png</file>
 		<file>build.png</file>
+		<file>button-ok.png</file>
 		<file>class.png</file>
 		<file>clean.png</file>
 		<file>clear-list.png</file>
