@@ -1,3 +1,6 @@
+Sun Apr 1
+    Expland/Collapse all; Check/Uncheck all buttons on search results dock
+
 Sun Mar 25 2012
     Restore position in the file when repopening it
 
